src/other/mico-2.3.12/test/idl/error/expected-stderr-case8.idl
case8.idl:13: 'C' is not member of enum '::U::E1'
